2015-03-25  Alexey Proskuryakov  <ap@apple.com>

        media/track/track-mode.html flakily times out
        https://bugs.webkit.org/show_bug.cgi?id=143085

        * TestExpectations: Added an expectation.

2015-03-25  Chris Fleizach  <cfleizach@apple.com>

        AX: table cells that use display:block render the table inaccessible to VoiceOver
        https://bugs.webkit.org/show_bug.cgi?id=143007

        Unreviewed, layout test fix.

        Skip associated accessibility/table-cell-display-block.html on failing platforms.

        * platform/efl/TestExpectations:
        * platform/gtk/TestExpectations:
            Specific platform changes in children ordering need to be updated to make this test pass.
        * platform/win/TestExpectations:
            Need to implement cellForRowAndColumn.

2015-03-25  Filip Pizlo  <fpizlo@apple.com>

        Heap variables shouldn't end up in the stack frame
        https://bugs.webkit.org/show_bug.cgi?id=141174

        Reviewed by Geoffrey Garen.

        * js/function-apply-aliased-expected.txt:
        * js/function-dot-arguments-expected.txt:
        * js/regress/arguments-expected.txt: Added.
        * js/regress/arguments-named-and-reflective-expected.txt: Added.
        * js/regress/arguments-named-and-reflective.html: Added.
        * js/regress/arguments-strict-mode-expected.txt: Added.
        * js/regress/arguments-strict-mode.html: Added.
        * js/regress/arguments.html: Added.
        * js/regress/script-tests/arguments-named-and-reflective.js: Added.
        * js/regress/script-tests/arguments-strict-mode.js: Added.
        * js/regress/script-tests/arguments.js: Added.
        * js/regress/script-tests/try-catch-get-by-val-cloned-arguments.js: Added.
        * js/regress/script-tests/try-catch-get-by-val-direct-arguments.js: Added.
        * js/regress/script-tests/try-catch-get-by-val-scoped-arguments.js: Added.
        * js/regress/script-tests/varargs-call.js: Added.