@@ -1,4 +1,10 @@
-//@ skip if $architecture == "arm64" and $hostOS == "darwin"
+// REGRESSION(r181326): It made dfg-int16array.js and dfg-int8array.js fail on AArch64 Linux
+// https://bugs.webkit.org/show_bug.cgi?id=142629
+
+// Fix flakey dfg-int8array.js and dfg-int16array.js tests for ARM64
+// https://bugs.webkit.org/show_bug.cgi?id=138390
+
+//@ skip if $architecture == "arm64"
 
 description(
 "This tests that int16 arrays work in the DFG."
