@@ -2128,7 +2128,7 @@
   cmd: defaultRunMozillaTest :normal, "../shell.js"
 - path: js1_5/Regress/regress-159334.js
   cmd: |
-      if ($architecture !~ /x86/i and $hostOS == "darwin") or $memoryLimited
+      if ($architecture !~ /x86/i and $hostOS == "darwin") or ($architecture == "arm64" and $hostOS == "linux") or $memoryLimited
           skip
       else
           defaultRunMozillaTest :normal, "../shell.js"
