@@ -1,3 +1,12 @@
+2015-03-26  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Unreviewed gardening, skip failing tests on AArch64 Linux.
+
+        * js/script-tests/array-from.js:
+        * js/script-tests/array-length-shortening.js:
+        * js/script-tests/dfg-int16array.js:
+        * js/script-tests/dfg-int8array.js:
+
 2015-03-25  Alexey Proskuryakov  <ap@apple.com>
 
         media/track/track-mode.html flakily times out
